# fpl_tool

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_PLAN.md  Makefile  PLAN.md  README.md  alembic.ini  development-workflow.md  docker-compose.yml  pyproject.toml
alembic/: env.py
data/: player_overrides.json
docs/iterations/frontend-redesign/: code-review-1.md  plan.md
docs/iterations/gw-points-and-test-gaps/: code-review-1.md  plan.md
docs/iterations/league-tables/: plan.md
docs/iterations/live-gameweek/: code-review-1.md  plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  theme.ts
scripts/: run-tests.sh
src/fpl/: auth.py  config.py  scheduler.py  types.py
tests/: conftest.py  test_matchweek_dates.py  test_provisional_bonus.py  test_scheduler.py  test_skeleton.py
tests/cache/: test_live_gw_cache.py
tests/fixtures/: bootstrap_static.json
tests/test_analysis/: test_captaincy.py  test_differentials.py  test_fdr.py  test_form.py  test_predictions.py  test_price.py  test_team.py  test_transfers.py
tests/test_api/: conftest.py  test_data_route.py  test_leagues_route.py  test_live_route.py  test_scores_form.py  test_team_route.py
tests/test_ingest/: test_fpl_api.py  test_leagues.py  test_mapper.py  test_odds.py  test_understat.py
tests/test_integration/: test_espn_scores_live.py  test_espn_stats_live.py  test_fpl_api_live.py  test_leagues_live.py  test_odds_live.py  test_projections_live.py  test_setpieces_live.py  test_understat_live.py
(+80 files in other folders)
