[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpl-cli"
version = "0.1.0"
description = "Data-driven Fantasy Premier League CLI assistant"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "alembic>=1.13",
    "keyring>=25.0",
    "feedparser>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest-cov>=5.0",
]

[project.scripts]
fpl = "fpl.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fpl"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live external APIs (deselect with '-m \"not integration\"')",
]
